crates/squealy/tests/compile_fail/aggregate_rejected_in_nullable_update_assignment.stderr
error[E0277]: the trait bound `squealy::AggregateExprAst<squealy::ColumnExprAst<CounterMaybeTotal>>: NonAggregateAst` is not satisfied
  --> tests/compile_fail/aggregate_rejected_in_nullable_update_assignment.rs:16:10
   |
16 |         .set(|counter| (counter.maybe_total.count(),));
   |          ^^^ the trait `NonAggregateAst` is not implemented for `squealy::AggregateExprAst<squealy::ColumnExprAst<CounterMaybeTotal>>`
   |
   = help: the following other types implement trait `squealy::UpdateColumnValues<S, Values>`:
             `()` implements `squealy::UpdateColumnValues<S, ()>`
             `(K0, K1)` implements `squealy::UpdateColumnValues<S, (V0, V1)>`
             `(K0, K1, K2)` implements `squealy::UpdateColumnValues<S, (V0, V1, V2)>`
             `(K0, K1, K2, K3)` implements `squealy::UpdateColumnValues<S, (V0, V1, V2, V3)>`
             `(K0, K1, K2, K3, K4)` implements `squealy::UpdateColumnValues<S, (V0, V1, V2, V3, V4)>`
             `(K0, K1, K2, K3, K4, K5)` implements `squealy::UpdateColumnValues<S, (V0, V1, V2, V3, V4, V5)>`
             `(K0, K1, K2, K3, K4, K5, K6)` implements `squealy::UpdateColumnValues<S, (V0, V1, V2, V3, V4, V5, V6)>`
             `(K0, K1, K2, K3, K4, K5, K6, K7)` implements `squealy::UpdateColumnValues<S, (V0, V1, V2, V3, V4, V5, V6, V7)>`
           and $N others
   = note: required for `Expr<'_, CountExpr<CounterMaybeTotal>, squealy::AggregateExprAst<squealy::ColumnExprAst<CounterMaybeTotal>>>` to implement `squealy::IntoNullableAssignmentValue<CounterMaybeTotal>`
   = note: required for `squealy::NullableColumn` to implement `squealy::IntoUpdateColumnValue<CounterMaybeTotal, Expr<'_, CountExpr<CounterMaybeTotal>, squealy::AggregateExprAst<squealy::ColumnExprAst<CounterMaybeTotal>>>>`
   = note: required for `(CounterMaybeTotal,)` to implement `squealy::UpdateColumnValues<Counter<'_>, (Expr<'_, CountExpr<CounterMaybeTotal>, squealy::AggregateExprAst<squealy::ColumnExprAst<CounterMaybeTotal>>>,)>`
